# OS-labs-2025

lab1/: Daemon.cpp  Daemon.h  TaskScheduler.h  build.sh  config.txt  main.cpp
lab2/: CMakeLists.txt  Conn.h  build.sh  conn_mmap.cpp  conn_pipe.cpp  conn_shm.cpp  host.cpp
